[Payments] Don't show Organization in billing address selection label.

BUG=662161

Review-Url: https://codereview.chromium.org/2472043003
Cr-Commit-Position: refs/heads/master@{#430655}

Former-commit-id: c6af37456ab84d08503af9f99077ef7e12f27092