chrome/browser/autofill/android/personal_data_manager_android.h
@@ -85,7 +85,9 @@ class PersonalDataManagerAndroid
   base::android::ScopedJavaLocalRef<jobjectArray> GetProfileLabelsToSuggest(
       JNIEnv* env,
       const base::android::JavaParamRef<jobject>& unused_obj,
-      jboolean include_name_in_label);
+      jboolean include_name_in_label,
+      jboolean include_organization_in_label,
+      jboolean include_country_in_label);
 
   // Returns the label of the given profile for PaymentRequest. This label does
   // not contain the full name or the email address. All other fields are
@@ -331,6 +333,8 @@ class PersonalDataManagerAndroid
       JNIEnv* env,
       bool address_only,
       bool include_name_in_label,
+      bool include_organization_in_label,
+      bool include_country_in_label,
       std::vector<AutofillProfile*> profiles);
 
   // Pointer to the java counterpart.
